--- a/packages/cyberstorm/src/components/Layout/BaseLayout/PageHeader/PageHeader.module.css
+++ b/packages/cyberstorm/src/components/Layout/BaseLayout/PageHeader/PageHeader.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--space--4);
+  min-width: 0;
 }
 
 @media (max-width: 30rem) {
